--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,8 +21,21 @@ body {
     }
   }
 
-@media (prefers-reduced-motion) {
-    html {
-      animation: back-anim 25s forwards infinite ease-in-out;
+@media screen and (max-width: 700px) {
+	* {
+        padding: 0;
+        margin: 0;
     }
-  }
+    body {
+        background-image: url("../assets/images/cosmos.jpg");
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+
+    }
+}
+/* @media screen and (max-width: 700px) */
